--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "clsx": "^2.1.1",
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.18",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
     "react-spinners": "^0.13.8",
     "resend": "^3.2.0",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1",
